--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Languages: 100% Trilingual in Spanish, English and French.
+                    <p>Languages: 100% Trilingual in Spanish, English and French. </p>
                     Interested in combining technology with gastronomy.
                     </p>
                 </div>
